# bragi

./: .dockerignore  .gitignore  Dockerfile  README.md  SPEC.md  config.example.yaml  pyproject.toml
bragi/: config.py  main.py  registry.py
bragi/adapters/: coqui_xtts.py  f5_tts.py  faster_whisper.py  fish_speech.py  kokoro.py  moonshine.py  paraformer.py  parakeet.py  piper.py  qwen3_tts.py  speechbrain_adapter.py  stt.py  tts.py  vosk_adapter.py
bragi/audio/: chunking.py  decoding.py  encoding.py
bragi/keys/: store.py
bragi/middleware/: auth.py
bragi/routes/: keys.py  models.py  speech.py  transcriptions.py  translations.py  voices.py
bragi/schemas/: errors.py  keys.py  requests.py  responses.py  voices.py
bragi/voices/: store.py
